# ans_main_tg_bot

./: .gitignore  admin.py  config.py  db.py  main.py  models.py  pyproject.toml  schemas.py  utils.py
alembic/: env.py
alembic/versions/: 2e74864516b4_user_init.py  65223c38f010_user_init.py  76cefce09a68_user.py  999ce7dc0834_init_servicemodel.py  ede91451be7f_notificationmodel_init.py
api/: app.py  crud.py  deps.py
api/routes/: main.py  notifications.py
bot/: main.py  models.py  utils.py
core/: config.py  db.py  models.py  schemas.py  utils.py
tests/: conftest.py  data_fixtures.py
tests/integration/: conftest.py  test_notification.py
tests/unit/: conftest.py  test_user.py  test_user_service_association.py
