[project]
name = "ans-main-tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.15.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "sqlalchemy-utils>=0.41.2",
    "alembic>=1.14.0",
    "pydentic>=0.0.1.dev3",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.9.2",
]
